// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallControlCADComponent Snapshots should handle edge cases and control visibility: custom-css-classes 1`] = `
<div>
  <div
    class="call-control-container custom-call-control"
  >
    <div
      class="caller-info"
    >
      <div
        class="call-icon-background"
      >
        <mdc-icon
          class="media-icon voice-media"
        />
      </div>
      <div
        class="customer-info"
      >
        <mdc-text
          class="md-text-wrapper voice-customer-name"
        >
          555-123-4567
        </mdc-text>
        <div
          class="call-details"
        >
          <div
            class="call-details-row"
          >
            <mdc-text
              class="md-text-wrapper call-timer"
              data-testid="cc-cad:call-timer"
            >
              Voice
               - 
              <span
                data-testid="TaskTimer"
              >
                00:00
              </span>
            </mdc-text>
          </div>
          <div
            class="call-status"
          />
        </div>
      </div>
    </div>
    <div
      class="recording-indicator"
    >
      <mdc-icon />
    </div>
    <audio
      autoplay=""
      id="remote-audio"
    />
    <div
      class="call-control-container"
      data-testid="call-control-container"
    >
      <div
        class="button-group"
      >
        <button
          aria-describedby="react-aria-:r1m:"
          aria-label="Mute"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:mute-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1m:"
        >
          <p>
            Mute
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r1n:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Transfer Voice"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:transfer"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1n:"
        >
          <p>
            Transfer Voice
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r1o:"
          aria-label="Resume Recording"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:recording-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1o:"
        >
          <p>
            Resume Recording
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r1p:"
          aria-label="End Voice"
          class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:end-call"
          type="button"
        >
          <mdc-icon
            class="call-control-button-cancel-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1p:"
        >
          <p>
            End Voice
          </p>
        </div>
      </div>
    </div>
    <div
      class="cad-variables"
    >
      <mdc-text
        class="md-text-wrapper queue"
      >
        <strong>
          Queue:
        </strong>
         
        <span>
          Support Team
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper voice-phone-number"
      >
        <strong>
          Phone Number:
        </strong>
         
        <span>
          555-123-4567
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper rona"
      >
        <strong>
          RONA:
        </strong>
         
        <span>
          30
        </span>
      </mdc-text>
    </div>
  </div>
  <div
    class="call-control-consult-container custom-consult-control"
  >
    <div
      class="call-control-consult"
    >
      <div
        class="consult-header"
      >
        <mdc-avatar
          class="task-avatar"
        />
        <div>
          <mdc-text
            class="md-text-wrapper consult-agent-name"
          >
            Consult Agent
          </mdc-text>
          <mdc-text
            class="md-text-wrapper consult-sub-text"
          >
            Consulting
             • 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
      </div>
      <div
        class="consult-buttons consult-buttons-container"
      >
        <button
          aria-describedby="react-aria-:r1q:"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="mute-consult-btn"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1q:"
        >
          <p>
            Mute
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r1r:"
          class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="cancel-consult-btn"
          type="button"
        >
          <mdc-icon
            class="call-control-consult-button-cancel-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r1r:"
        >
          <p>
            End Consult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should handle edge cases and control visibility: limited-control-visibility 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        555-123-4567
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    />
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        555-123-4567
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        30
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should handle edge cases and control visibility: no-customer-information 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        No Caller ID
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:r1g:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1g:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1h:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1h:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1i:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1i:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1j:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Voice"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1j:"
      >
        <p>
          Transfer Voice
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1k:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1k:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1l:"
        aria-label="End Voice"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1l:"
      >
        <p>
          End Voice
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        No Team Name
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        No Phone Number
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        No RONA
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render basic call states and media types: chat-media-type 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon chat-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper digital-customer-name"
        id="customer-name-trigger-chat-interaction-123"
      >
        chat-customer@example.com
      </mdc-text>
      <mdc-tooltip
        class="call-control-task-tooltip"
        tooltip-type="description"
      >
        <mdc-text
          class="md-text-wrapper"
        >
          chat-customer@example.com
        </mdc-text>
      </mdc-tooltip>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Chat
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:rc:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rc:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rd:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rd:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:re:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:re:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rf:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Chat"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rf:"
      >
        <p>
          Transfer Chat
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rg:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rg:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rh:"
        aria-label="End Chat"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rh:"
      >
        <p>
          End Chat
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Chat Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper digital-phone-number"
      id="phone-number-trigger-chat-interaction-123"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        chat-customer@example.com
      </span>
    </mdc-text>
    <mdc-tooltip
      class="call-control-task-tooltip"
      tooltip-type="description"
    >
      <mdc-text
        class="md-text-wrapper"
      >
        chat-customer@example.com
      </mdc-text>
    </mdc-tooltip>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        45
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render basic call states and media types: combined-states 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        555-123-4567
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:r6:"
        aria-label="Unmute"
        class="md-button-circle-wrapper call-control-button-muted md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-muted-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r6:"
      >
        <p>
          Unmute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r7:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r7:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r8:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r8:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r9:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Voice"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r9:"
      >
        <p>
          Transfer Voice
        </p>
      </div>
      <button
        aria-describedby="react-aria-:ra:"
        aria-label="Pause Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:ra:"
      >
        <p>
          Pause Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rb:"
        aria-label="End Voice"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rb:"
      >
        <p>
          End Voice
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        555-123-4567
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        30
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render basic call states and media types: default-telephony 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        555-123-4567
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:r0:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r0:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r2:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r2:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r3:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Voice"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r3:"
      >
        <p>
          Transfer Voice
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r4:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r4:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r5:"
        aria-label="End Voice"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r5:"
      >
        <p>
          End Voice
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        555-123-4567
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        30
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render basic call states and media types: social-media-type 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-brandvisual
        class="media-icon social-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper digital-customer-name"
        id="customer-name-trigger-social-interaction-123"
      >
        Social Customer
      </mdc-text>
      <mdc-tooltip
        class="call-control-task-tooltip"
        tooltip-type="description"
      >
        <mdc-text
          class="md-text-wrapper"
        >
          Social Customer
        </mdc-text>
      </mdc-tooltip>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Social
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:ri:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:ri:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rj:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rj:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rk:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rk:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rl:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Social"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rl:"
      >
        <p>
          Transfer Social
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rm:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rm:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:rn:"
        aria-label="End Social"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:rn:"
      >
        <p>
          End Social
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Social Media Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper digital-phone-number"
      id="phone-number-trigger-social-interaction-123"
    >
      <strong>
        Customer Name
      </strong>
       
      <span>
        Social Customer
      </span>
    </mdc-text>
    <mdc-tooltip
      class="call-control-task-tooltip"
      tooltip-type="description"
    >
      <mdc-text
        class="md-text-wrapper"
      >
        Social Customer
      </mdc-text>
    </mdc-tooltip>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        60
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render consultation and wrapup modes: consultation-accepted 1`] = `
<div>
  <div
    class="call-control-container "
  >
    <div
      class="caller-info"
    >
      <div
        class="call-icon-background"
      >
        <mdc-icon
          class="media-icon voice-media"
        />
      </div>
      <div
        class="customer-info"
      >
        <mdc-text
          class="md-text-wrapper voice-customer-name"
        >
          555-123-4567
        </mdc-text>
        <div
          class="call-details"
        >
          <div
            class="call-details-row"
          >
            <mdc-text
              class="md-text-wrapper call-timer"
              data-testid="cc-cad:call-timer"
            >
              Voice
               - 
              <span
                data-testid="TaskTimer"
              >
                00:00
              </span>
            </mdc-text>
          </div>
          <div
            class="call-status"
          />
        </div>
      </div>
    </div>
    <div
      class="recording-indicator"
    >
      <mdc-icon />
    </div>
    <audio
      autoplay=""
      id="remote-audio"
    />
    <div
      class="call-control-container"
      data-testid="call-control-container"
    >
      <div
        class="button-group"
      >
        <button
          aria-describedby="react-aria-:ru:"
          aria-label="Mute"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:mute-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:ru:"
        >
          <p>
            Mute
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rv:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Transfer Voice"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:transfer"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rv:"
        >
          <p>
            Transfer Voice
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r10:"
          aria-label="Resume Recording"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:recording-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r10:"
        >
          <p>
            Resume Recording
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r11:"
          aria-label="End Voice"
          class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:end-call"
          type="button"
        >
          <mdc-icon
            class="call-control-button-cancel-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r11:"
        >
          <p>
            End Voice
          </p>
        </div>
      </div>
    </div>
    <div
      class="cad-variables"
    >
      <mdc-text
        class="md-text-wrapper queue"
      >
        <strong>
          Queue:
        </strong>
         
        <span>
          Support Team
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper voice-phone-number"
      >
        <strong>
          Phone Number:
        </strong>
         
        <span>
          555-123-4567
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper rona"
      >
        <strong>
          RONA:
        </strong>
         
        <span>
          30
        </span>
      </mdc-text>
    </div>
  </div>
  <div
    class="call-control-consult-container "
  >
    <div
      class="call-control-consult"
    >
      <div
        class="consult-header"
      >
        <mdc-avatar
          class="task-avatar"
        />
        <div>
          <mdc-text
            class="md-text-wrapper consult-agent-name"
          >
            Consult Agent
          </mdc-text>
          <mdc-text
            class="md-text-wrapper consult-sub-text"
          >
            Consulting
             • 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
      </div>
      <div
        class="consult-buttons consult-buttons-container"
      >
        <button
          aria-describedby="react-aria-:r12:"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="mute-consult-btn"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r12:"
        >
          <p>
            Mute
          </p>
        </div>
        <button
          aria-describedby="react-aria-:r13:"
          class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="cancel-consult-btn"
          type="button"
        >
          <mdc-icon
            class="call-control-consult-button-cancel-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:r13:"
        >
          <p>
            End Consult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render consultation and wrapup modes: consultation-hidden-in-wrapup 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        555-123-4567
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:r1a:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1a:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1b:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Voice"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1b:"
      >
        <p>
          Transfer Voice
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1c:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1c:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r1d:"
        aria-label="End Voice"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r1d:"
      >
        <p>
          End Voice
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        555-123-4567
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        30
      </span>
    </mdc-text>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render consultation and wrapup modes: consultation-initiated 1`] = `
<div>
  <div
    class="call-control-container "
  >
    <div
      class="caller-info"
    >
      <div
        class="call-icon-background"
      >
        <mdc-icon
          class="media-icon voice-media"
        />
      </div>
      <div
        class="customer-info"
      >
        <mdc-text
          class="md-text-wrapper voice-customer-name"
        >
          555-123-4567
        </mdc-text>
        <div
          class="call-details"
        >
          <div
            class="call-details-row"
          >
            <mdc-text
              class="md-text-wrapper call-timer"
              data-testid="cc-cad:call-timer"
            >
              Voice
               - 
              <span
                data-testid="TaskTimer"
              >
                00:00
              </span>
            </mdc-text>
          </div>
          <div
            class="call-status"
          />
        </div>
      </div>
    </div>
    <div
      class="recording-indicator"
    >
      <mdc-icon />
    </div>
    <audio
      autoplay=""
      id="remote-audio"
    />
    <div
      class="call-control-container"
      data-testid="call-control-container"
    >
      <div
        class="button-group"
      >
        <button
          aria-describedby="react-aria-:ro:"
          aria-label="Mute"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:mute-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:ro:"
        >
          <p>
            Mute
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rp:"
          aria-label="Hold the call"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:hold-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rp:"
        >
          <p>
            Hold the call
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rq:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Consult with another agent"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:consult"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rq:"
        >
          <p>
            Consult with another agent
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rr:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Transfer Voice"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:transfer"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rr:"
        >
          <p>
            Transfer Voice
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rs:"
          aria-label="Resume Recording"
          class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:recording-toggle"
          type="button"
        >
          <mdc-icon
            class="call-control-button-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rs:"
        >
          <p>
            Resume Recording
          </p>
        </div>
        <button
          aria-describedby="react-aria-:rt:"
          aria-label="End Voice"
          class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
          data-color="primary"
          data-disabled="false"
          data-ghost="false"
          data-inverted="false"
          data-multiple-children="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="call-control:end-call"
          type="button"
        >
          <mdc-icon
            class="call-control-button-cancel-icon"
          />
        </button>
        <div
          class="md-tooltip-label"
          id="react-aria-:rt:"
        >
          <p>
            End Voice
          </p>
        </div>
      </div>
    </div>
    <div
      class="cad-variables"
    >
      <mdc-text
        class="md-text-wrapper queue"
      >
        <strong>
          Queue:
        </strong>
         
        <span>
          Support Team
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper voice-phone-number"
      >
        <strong>
          Phone Number:
        </strong>
         
        <span>
          555-123-4567
        </span>
      </mdc-text>
      <mdc-text
        class="md-text-wrapper rona"
      >
        <strong>
          RONA:
        </strong>
         
        <span>
          30
        </span>
      </mdc-text>
    </div>
  </div>
</div>
`;

exports[`CallControlCADComponent Snapshots should render consultation and wrapup modes: wrapup-mode 1`] = `
<div
  class="call-control-container "
>
  <div
    class="caller-info"
  >
    <div
      class="call-icon-background"
    >
      <mdc-icon
        class="media-icon voice-media"
      />
    </div>
    <div
      class="customer-info"
    >
      <mdc-text
        class="md-text-wrapper voice-customer-name"
      >
        555-123-4567
      </mdc-text>
      <div
        class="call-details"
      >
        <div
          class="call-details-row"
        >
          <mdc-text
            class="md-text-wrapper call-timer"
            data-testid="cc-cad:call-timer"
          >
            Voice
             - 
            <span
              data-testid="TaskTimer"
            >
              00:00
            </span>
          </mdc-text>
        </div>
        <div
          class="call-status"
        />
      </div>
    </div>
  </div>
  <div
    class="recording-indicator"
  >
    <mdc-icon />
  </div>
  <audio
    autoplay=""
    id="remote-audio"
  />
  <div
    class="call-control-container"
    data-testid="call-control-container"
  >
    <div
      class="button-group"
    >
      <button
        aria-describedby="react-aria-:r14:"
        aria-label="Mute"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:mute-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r14:"
      >
        <p>
          Mute
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r15:"
        aria-label="Hold the call"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:hold-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r15:"
      >
        <p>
          Hold the call
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r16:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Consult with another agent"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:consult"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r16:"
      >
        <p>
          Consult with another agent
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r17:"
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Transfer Voice"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:transfer"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r17:"
      >
        <p>
          Transfer Voice
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r18:"
        aria-label="Resume Recording"
        class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:recording-toggle"
        type="button"
      >
        <mdc-icon
          class="call-control-button-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r18:"
      >
        <p>
          Resume Recording
        </p>
      </div>
      <button
        aria-describedby="react-aria-:r19:"
        aria-label="End Voice"
        class="md-button-circle-wrapper call-control-button-cancel md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="false"
        data-inverted="false"
        data-multiple-children="false"
        data-outline="false"
        data-shallow-disabled="false"
        data-size="40"
        data-testid="call-control:end-call"
        type="button"
      >
        <mdc-icon
          class="call-control-button-cancel-icon"
        />
      </button>
      <div
        class="md-tooltip-label"
        id="react-aria-:r19:"
      >
        <p>
          End Voice
        </p>
      </div>
    </div>
  </div>
  <div
    class="cad-variables"
  >
    <mdc-text
      class="md-text-wrapper queue"
    >
      <strong>
        Queue:
      </strong>
       
      <span>
        Support Team
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper voice-phone-number"
    >
      <strong>
        Phone Number:
      </strong>
       
      <span>
        555-123-4567
      </span>
    </mdc-text>
    <mdc-text
      class="md-text-wrapper rona"
    >
      <strong>
        RONA:
      </strong>
       
      <span>
        30
      </span>
    </mdc-text>
  </div>
</div>
`;
